# bootCAN

./: .gitignore  README.md  build.sh  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/: App.tsx  index.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/core/: bus_stats.rs  channel.rs  filter.rs  message.rs  mod.rs  trace_logger.rs  trace_player.rs
src-tauri/src/core/dbc/: mod.rs  models.rs  parser.rs  sym_parser.rs
src-tauri/src/hal/: mod.rs  pcan.rs  socketcan.rs  traits.rs  virtual_can.rs
src/components/: BusStatus.tsx  ChannelManager.tsx  ConnectionPanel.tsx  DbcManager.tsx  FilterPanel.tsx  MessageViewer.tsx  PlotPanel.tsx  SignalInspector.tsx  SignalSelector.tsx  Toolbar.tsx  TraceManager.tsx  TransmitPanel.tsx  icons.tsx  index.ts
src/stores/: canStore.ts
src/types/: project.ts
