[package]
name = "bootcan"
version = "0.1.0"
description = "A cross-platform CAN/CAN FD network monitoring and analysis tool"
authors = ["bootCAN Team"]
edition = "2021"

[lib]
name = "bootcan_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
log = "0.4"
env_logger = "0.10"
async-trait = "0.1"
parking_lot = "0.12"
uuid = { version = "1", features = ["v4"] }

# SocketCAN support (Linux only)
[target.'cfg(target_os = "linux")'.dependencies]
socketcan = "3"
nix = { version = "0.27", features = ["net"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

